tests/type-check/good/tuple-matches-function-ann.arr
fun f(t :: {Boolean; String}):
   t
end

f({true; 3})
