tests/type-check/bad/tuple-is-not-booleans.arr
x :: {Boolean; Boolean} = {3;4}
